Backport 6460 to 7.6 (#6538)
* Backport #6460 to 7.6.0
* Add support for #6508